= Vantiv eCommerce Chargeback SDK CHANGELOG

== Version 2.1.1 (April 20, 2018)

* Text fixes

== Version 2.1.0 (April 20, 2018)

* Initial release