@@ -28,6 +28,9 @@ from cnpsdk import (utils, communication)
 
 conf = utils.Configuration()
 
+SERVICE_ROUTE = "/services/chargebacks"
+
+
 """
 /////////////////////////////////////////////////////
             ChargebackRetrieval API:
@@ -37,25 +40,25 @@ conf = utils.Configuration()
 
 def upload_document(case_id, document_path, config=conf):
     document_id = document_path.split("/")[-1]
-    request_url = config.url + "/upload/" + str(case_id) + "/" + str(document_id)
-    return communication.http_post_document_request(request_url, document_path, config=config)
+    url_suffix = SERVICE_ROUTE + "/upload/" + str(case_id) + "/" + str(document_id)
+    return communication.http_post_document_request(url_suffix, document_path, config=config)
     
 
 def retrieve_document(case_id, document_id, document_path, config=conf):
-    request_url = config.url + "/retrieve/" + str(case_id) + "/" + str(document_id)
-    communication.http_get_document_request(request_url, document_path, config=config)
+    url_suffix = SERVICE_ROUTE + "/retrieve/" + str(case_id) + "/" + str(document_id)
+    communication.http_get_document_request(url_suffix, document_path, config=config)
 
 
 def replace_document(case_id, document_id, document_path, config=conf):
-    request_url = config.url + "/replace/" + case_id + "/" + document_id
-    return communication.http_put_document_request(request_url, document_path, config=config)
+    url_suffix = SERVICE_ROUTE + "/replace/" + case_id + "/" + document_id
+    return communication.http_put_document_request(url_suffix, document_path, config=config)
 
 
 def remove_document(case_id, document_id, config=conf):
-    request_url = config.url + "/remove/" + str(case_id) + "/" + str(document_id)
-    return communication.http_delete_document_response(request_url, config=config)
+    url_suffix = SERVICE_ROUTE + "/remove/" + str(case_id) + "/" + str(document_id)
+    return communication.http_delete_document_response(url_suffix, config=config)
 
 
 def list_documents(case_id, config=conf):
-    request_url = config.url + "/list/" + str(case_id)
-    return communication.http_get_document_list_request(request_url, config=config)
+    url_suffix = SERVICE_ROUTE + "/list/" + str(case_id)
+    return communication.http_get_document_list_request(url_suffix, config=config)
